--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn-custom {
+    @apply bg-green-600 p-4 border-2 border-black;
+  }
+
+  body {
+    @apply font-sans m-0;
+  }
+}
